[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "av_backend"
version = "0.0.1-dev"
dependencies = [
    "psycopg2-binary==2.9.3",
    # Wagtail
    "wagtail>=4.0,<4.1",
    # Django
    "Django>=4.1,<4.2",
    "django-environ==0.9.0",
    "django-model-utils==4.2.0",
    "django-extensions==3.2.1",
    # Google APIs
    "google-api-python-client==2.64.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.5.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]
test = [
    "pytest-django==4.5.2",
]

[project.scripts]
"manage.py" = "av_backend.manage:main"

[tool.setuptools]
py-modules = [
    "av_backend",
    "home",
    "search",
]