[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "av_backend"
version = "0.0.1-dev"
requires-python = ">3.10"
dependencies = [
    "psycopg2<2.10",
    # Wagtail
    "wagtail>=4.1,<4.2",
    "wagtailmenus<3.2",
    # Django
    "Django>=4.1,<4.2",
    "django-environ==0.9.0",
    "django-model-utils==4.2.0",
    "django-extensions==3.2.1",
    "whitenoise[brotli]",
    # GraphQL
    "strawberry-django-plus<1.36",
    "strawberry-django-jwt<0.3",
#    "strawberry-django-auth",
    # Google APIs
    "google-api-python-client==2.64.0",
    "google-auth-httplib2==0.1.0",
    "google-auth-oauthlib==0.5.3",
]

[project.optional-dependencies]
dev = [
    "poethepoet",
    "pip-tools",
    "django-debug-toolbar",
    "jupyter",
]
test = [
    "pytest-django",
]

[tool.poe.tasks]
manage = "python manage.py"
pip-compile-prod = "pip-compile -o requirements.txt pyproject.toml"
pip-compile-dev = "pip-compile --extra dev -o requirements.dev.txt pyproject.toml"
pip-compile-test = "pip-compile --extra test -o requirements.test.txt pyproject.toml"
compile-requirements = ["pip-compile-prod", "pip-compile-dev", "pip-compile-test"]


[tool.setuptools]
py-modules = [
    "av_backend",
    "home",
]